[package]
name = "sql_protocol"
version = "0.1.0"
authors = ["dkkb <dabkb@aol.com>"]
edition = "2018"
description = "SQL protocol implement in Rust"
homepage = "https://github.com/dakv/sql-protocol"
keywords = ["mysql", "sql", "protocol"]
categories = ["mysql", "sql", "protocol"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
byteorder = "1.3.4"
sha-1 = "0.8.2"
quick-error = "1.2.3"
dakv_logger = "0.1.3"
lazy_static = "1.4.0"

[[example]]
name = "server"
path = "example/server.rs"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true
debug-assertions = true

# The release profile, used for `cargo build --release`
[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false  # default logging level is DEBUG, set debug-assertions false to enable INFO
